err/collective.facetednavigation.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/facetednavigation'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/browser'...
Compiling './lib/python3.5/site-packages/collective/facetednavigation/browser/facetednavigation.py'...
***   File "./lib/python3.5/site-packages/collective/facetednavigation/browser/facetednavigation.py", line 239
    except CatalogError, exc:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/facetednavigation/browser/resources'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/browser/templates'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/doc'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/locales'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/locales/es'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/locales/fr'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/profiles'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/profiles/default'...
Listing './lib/python3.5/site-packages/collective/facetednavigation/tests'...
Listing './lib/python3.5/site-packages/collective.facetednavigation-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
